--- a/Lists.html
+++ b/Lists.html
@@ -22,6 +22,11 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Newest">Newest posts</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/201406-%EC%A0%95%EB%B6%80%EA%B0%9C%EA%B0%81-%EC%9E%A5%EA%B4%80-%EB%B0%8F-%EA%B0%81-%ED%9B%84%EB%B3%B4%EB%93%A4-%ED%94%84%EB%A1%9C%ED%95%84-%EB%AA%A8%EC%9D%8C">2014-06 정부개각, 장관 및 각 후보들 프로필 모음</a>, 2014-06-23</li>
+		<li><a href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
+		<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
+		<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
+		<li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
 		<li><a href="http://kipid.tistory.com/entry/%EC%A0%95%EB%8F%84%EC%A0%84-%EA%B4%80%EB%A0%A8-%EC%97%AD%EC%82%AC-%EC%A0%95%EB%A6%AC">정도전 관련 역사 정리</a>, 2014-06-14</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EB%AC%B8%EC%B0%BD%EA%B7%B9-vs-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014 총리후보, 문창극(文昌克) vs 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
@@ -35,9 +40,9 @@
 		<li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
 		<li><a href="http://kipid.tistory.com/entry/Learning-PHP">Learning PHP</a>, 2014-05-22</li>
 		<li><a href="http://kipid.tistory.com/entry/Learning-Nodejs">Learning Node.js</a>, 2014-05-22</li>
-		<li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.1 (2014-05-22), not released yet</a>, 2014-05-22</li>
+		<!-- <li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.1 (2014-05-22), not released yet</a>, 2014-05-22</li>
 		<li><a href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
-		<!-- <li><a href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-05-04</li>
+		<li><a href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-05-04</li>
 		<li><a href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript">Regular Expression (정규 표현식), and match/replace method in javascript</a>, 2014-05-03</li>
 		<li><a href="http://kipid.tistory.com/entry/Interactive-graph-and-chart-in-HTML">Interactive graph and chart in HTML</a>, 2014-05-03</li> -->
 	</ul>
@@ -55,7 +60,7 @@
 	</ul>
 </div> -->
 
-<div class="sec"><h2>[Physics/Math] Category</h2>
+<div class="sec"><h2 class="no-sec-N" id="sec-PM">[Physics/Math] Category</h2>
 	<div class="subsec"><h3 id="sec-Physics">Physics (물리 개념과 이론들에 관한 설명들.)</h3>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/Tensor">텐서(Tensor)와 상대론(Relativity) - 0. 텐서(Tensor)란?</a>, 2014-03-19</li>
@@ -70,6 +75,7 @@
 			<li><a href="http://kipid.tistory.com/entry/SI-cgs-unit-and-physical-constants">SI, cgs 단위계(unit) 및 물리상수(physical constants)</a>, 2014-02-17</li>
 			<li><a href="http://kipid.tistory.com/entry/Entropy">엔트로피(Entropy) 개념에 대한 이해</a>, 2014-01-24</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Math">Mathematics (수학 개념과 이론들에 관한 설명들.)</h3>
 		<ul>
@@ -77,6 +83,7 @@
 			<li><a href="http://kipid.tistory.com/entry/Linear-Algebra">선형 대수학 간단한 정리들 (Linear Algebra)</a>, 2014-03-18</li>
 			<li><a href="http://kipid.tistory.com/entry/Dirac-delta-function">디락 델타 함수 (Dirac delta function)</a>, 2014-02-13</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Physics-Idea">New Ideas in Physics (새로운 시각의 물리개념 및 이론들. 대부분 아이디어 정도만 간략하게 포스팅.)</h3>
 		<ul>
@@ -85,32 +92,38 @@
 			<li><a href="http://kipid.tistory.com/entry/Time-as-an-emergent-phenomenon">Time as an emergent phenomenon</a>, 2014-02-14</li>
 			<li><a href="http://kipid.tistory.com/entry/Multiverse">다중 우주론 (Multiverse)</a>, 2014-02-10</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Physics-News">News (개인적으로 관심있게 본 물리/수학 관련 뉴스들 정리.)</h3>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/BICEP2-evidence-of-Inflation-and-Gravitational-wave">BICEP2: 중력파와 급팽창 이론(인플레이션, inflation theory)의 직접적인 증거</a>, 2014-04-07</li>
 			<li><a href="http://kipid.tistory.com/entry/Black-Hole-Mystery-Wrapped-in-Firewall-Paradox">방화벽 역설(Firewall paradox)로 인한 블랙홀 미스테리</a>, 2014-02-10</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Physics-etc">Etc. (기타 물리/수학 관련 잡다한 이야기들.)</h3>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/Physicist-Quotations">물리학자들의 명언(名言)들 (Physicist Quotations)</a>, 2014-03-04</li>
 			<li><a href="http://kipid.tistory.com/entry/Skepticism-about-String-theory">초끈이론 회의론 (Skepticism about String theory)</a>, 2014-02-10</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 </div>
 
-<div class="sec"><h2 id="sec-IT">[IT/Programming] Category</h2>
+<div class="sec"><h2 class="no-sec-N" id="sec-IT">[IT/Programming] Category</h2>
 	<div class="subsec"><h3 id="sec-IT-HTML">HTML related (HTML, css, javascript 관련 이야기들)</h3>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.0</a>, 2014-04-06</li>
 			<li><a href="http://kipid.tistory.com/entry/docuK-short-copiable-version">HTML docuK format ver. 2.1, short copiable version</a>, 2014-06-13</li>
+			<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
 			<li><a href="http://kipid.tistory.com/entry/equations-in-html">인터넷, Web, HTML, 블로그에서 수식 사용하기 (Equation or math in HTML, blog)</a>, 2014-04-20</li>
 			<li><a href="http://kipid.tistory.com/entry/Syntax-Highlighter-in-HTML-google-code-prettify">인터넷에서 예쁘게 코드 입력하기 (google code prettify)</a>, 2014-01-17</li>
 			<li><a href="http://kipid.tistory.com/entry/Citing-the-references-automatically-in-HTML-like-LaTeX">Citing the references automatically in HTML (like LaTeX)</a>, 2014-03-02</li>
 			<li><a href="http://kipid.tistory.com/entry/introducing-LaTeX-and-Guides">LaTeX(라텍스, 레이텍) 소개 및 설명서(Guide)들</a>, 2014-03-24</li>
 			<li><a href="http://kipid.tistory.com/entry/Delayed-Loading-in-HTML-by-JavaScript-jQuery">Delayed Loading in HTML by JavaScript (+jQuery)</a>, 2014-05-29</li>
 			<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
+			<li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
+			<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
 		</ul>
 		<div class="p"></div>
 		<ul>
@@ -132,11 +145,11 @@
 		<div class="p"></div>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/embedding-twitter-tweet">트위터 트윗 퍼오기</a>, 2014-02-11</li>
-			<li><a href="http://kipid.tistory.com/entry/Facebook-comment-test">Facebook comment test</a>, 2014-01-17</li>
+			<li><a href="http://kipid.tistory.com/entry/Facebook-comment-test">댓글 플러그인 | 위젯 (SNS comment plug-in | widget)</a>, 2014-01-17</li>
 			<li><a href="http://kipid.tistory.com/entry/Font-test">여러가지 글꼴 테스트 (Font test)</a>, 2014-01-20</li>
 			<li><a href="http://kipid.tistory.com/entry/%ED%85%8C%EC%8A%A4%ED%8A%B8">테스트 (div 등, 개인적인 테스트 샘플)</a>, 2014-03-20</li>
 		</ul>
-		
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-IT-Algorithm-Database">Algorithm and Database</h3>
 		<ul>
@@ -146,6 +159,7 @@
 			<li><a href="http://kipid.tistory.com/entry/Hash-Table-and-Hash-function">Hash Table and Hash function</a>, 2014-02-10</li>
 			<li><a href="http://kipid.tistory.com/entry/Studying-SQL-Structured-Query-Language">SQL(Structured Query Language)을 배워보자</a>, 2014-03-06</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-IT-etc">Etc.</h3>
 		<ul>
@@ -154,15 +168,18 @@
 			<li><a href="http://kipid.tistory.com/entry/Programming-Languages">여러가지 프로그래밍 언어들</a>, 2014-01-24</li>
 			<li><a href="http://kipid.tistory.com/entry/%ED%95%9C%EA%B5%AD-IT%EC%9D%98-%EB%AF%B8%EB%9E%98">한국 IT의 미래</a>, 2014-03-24</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 </div>
 
-<div class="sec"><h2>[사회/정치/경제] Category</h2>
+<div class="sec"><h2 class="no-sec-N" id="sec-SPE">[사회/정치/경제] Category</h2>
 	<div class="subsec"><h3 id="sec-History">국사 (대한민국 역사)</h3>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/%EA%B5%AD%EC%82%AC-%EC%A0%95%EB%A6%AC%ED%95%B4-%EB%86%93%EC%9D%80-%EA%B2%83">국사 정리해 놓은 것</a>, 2014-03-09</li>
 			<li><a href="http://kipid.tistory.com/entry/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD-%ED%97%8C%EB%B2%95-%EC%A0%84%EB%AC%B8">대한민국 헌법 전문</a>, 2014-03-06</li>
+			<li><a href="http://kipid.tistory.com/entry/%EC%A0%95%EB%8F%84%EC%A0%84-%EA%B4%80%EB%A0%A8-%EC%97%AD%EC%82%AC-%EC%A0%95%EB%A6%AC">정도전 관련 역사 정리</a>, 2014-06-14</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Economy">경제</h3>
 		<ul>
@@ -171,31 +188,37 @@
 			<li><a href="http://kipid.tistory.com/entry/government-officials-property">고위공직자 및 국회의원 정기 재산 신고 사항 (2011~2014)</a>, 2014-03-29</li>
 			<li><a href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-04-12</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Society">사회</h3>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/what-is-justice">정의란 무엇인가? - 1강 벤담의 공리주의</a>, 2014-01-22</li>
 			<li><a href="http://kipid.tistory.com/entry/Philosophy-of-Success">성공이란 무엇일까? (Philosophy of Success)</a>, 2014-03-23</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Politics">정치</h3>
 		<ul>
+			<li><a href="http://kipid.tistory.com/entry/201406-%EC%A0%95%EB%B6%80%EA%B0%9C%EA%B0%81-%EC%9E%A5%EA%B4%80-%EB%B0%8F-%EA%B0%81-%ED%9B%84%EB%B3%B4%EB%93%A4-%ED%94%84%EB%A1%9C%ED%95%84-%EB%AA%A8%EC%9D%8C">2014-06 정부개각, 장관 및 각 후보들 프로필 모음</a>, 2014-06-23</li>
 			<li><a href="http://kipid.tistory.com/entry/2014-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EB%AC%B8%EC%B0%BD%EA%B7%B9-vs-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014 총리후보, 문창극(文昌克) vs 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
 			<li><a href="http://kipid.tistory.com/entry/%EB%B0%95%EC%9B%90%EC%88%9C%E6%9C%B4%E5%85%83%E6%B7%B3-vs-%EC%A0%95%EB%AA%BD%EC%A4%80%E9%84%AD%E5%A4%A2%E6%BA%96-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">박원순(朴元淳) vs 정몽준(鄭夢準) 프로필 비교</a>, 2014-05-25</li>
 			<li><a href="http://kipid.tistory.com/entry/%EC%9D%98%EB%A3%8C-%ED%8C%8C%EC%97%85-%EA%B4%80%EB%A0%A8">의료 파업 및 의료 영리화, 원격진료. 외부에서 본 개인의견</a>, 2014-03-22</li>
 			<li><a href="http://kipid.tistory.com/entry/%EB%AC%B8%EC%9E%AC%EC%9D%B8%E6%96%87%E5%9C%A8%E5%AF%85-vs-%EB%B0%95%EA%B7%BC%ED%98%9C%E6%9C%B4%E6%A7%BF%E6%83%A0-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">문재인(文在寅) vs 박근혜(朴槿惠) 프로필 비교</a>, 2014-03-17</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Accident">사건 사고</h3>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/%EC%84%B8%EC%9B%94%ED%98%B8-%EC%B9%A8%EB%AA%B0%EC%82%AC%EA%B3%A0">세월호 침몰사고</a>, 2014-04-22; 사고는 2014년 4월 16일 8시 48분 경 대한민국 전라남도 진도군 조도면 부근 황해 상에서 발생.</li>
 			<li><a href="http://kipid.tistory.com/entry/%EA%B9%80%EC%96%B4%EC%A4%80%EC%9D%98-KFC1-%EC%96%B4%EC%A4%80%EC%9D%98-%EA%B7%80%ED%99%98">[김어준의 KFC#1] 어준의 귀환! "닭을 열심히 튀기겠습니다"</a>, 2014-03-17; 주로 "국정원, 서울시 공무원 간첩 증거조작 사건"과 "월세 과세 정책의 진실?"를 다뤘음.</li>
-			<li><a href="http://kipid.tistory.com/entry/NIS-cheating">2012~2013 대한민국 국가정보원 여론 조작 사건</a>, 2014-02-11</li>
+			<li><a href="http://kipid.tistory.com/entry/NIS-cheating">2012~2013 대한민국 국가정보원 (국정원, NIS) 여론 조작 사건</a>, 2014-02-11</li>
+			<li><a href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
 		</ul>
+		<div class="p"></div>
 	</div>
 </div>
 
-<div class="sec"><h2 id="sec-Break">[Music/Break] Category</h2>
+<div class="sec"><h2 class="no-sec-N" id="sec-Break">[Music/Break] Category</h2>
 	<ul>
 		<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
 		<li><a href="http://kipid.tistory.com/entry/Personal-selection-of-music">Personal selection of music</a>, 2014-03-20</li>
@@ -204,6 +227,7 @@
 		<li><a href="http://kipid.tistory.com/entry/%EB%AC%B4%ED%95%9C%EB%8F%84%EC%A0%84-%EC%9E%90%EC%9C%A0%EB%A1%9C-%EA%B0%80%EC%9A%94%EC%A0%9C-2013-11-02">무한도전 자유로 가요제 (2013-11-02)</a>, 2014-02-15</li>
 		<li><a href="http://kipid.tistory.com/entry/Benjamin-Button-Letters-to-his-daughter">Benjamin Button - Letters to his daughter</a>, 2014-02-15</li>
 	</ul>
+	<div class="p"></div>
 </div>
 <!-- 
 <div class="sec noToggleUI"><h2 class="no-sec-N">References and Related Articles</h2>
