--- a/Lists.html
+++ b/Lists.html
@@ -18,10 +18,15 @@
 <meta name="description" content="List of posts in kipid's blog" />
 <div class="sec"><h1>Lists</h1>
 	<div class="p">블로그 글들 리스트를 정리해 놓은 것입니다. 제목뒤 날짜는 보통 처음 글을 올린 날짜입니다. (올려놓고 꾸준히 업데이트하는 글들이 많아서...)</div>
+	<div class="p">
+		단축키 (T: Table of Contents, F: Forward Section, D: Previous Section) 도 활용해 보시길.
+	</div>
 </div>
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Newest">Newest posts</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/Decoherence-the-Measurement-Problem-of-Quantum-Mechanics">Decoherence, the Measurement Problem of Quantum Mechanics</a>, 2014-07-29</li>
+		<li><a href="http://kipid.tistory.com/entry/%EB%85%B8%ED%9A%8C%EC%B0%AC%E9%AD%AF%E6%9C%83%E7%87%A6-vs-%EB%82%98%EA%B2%BD%EC%9B%90%E7%BE%85%E5%8D%BF%E7%91%97-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">노회찬(魯會燦) vs 나경원(羅卿瑗) 프로필 비교</a>, 2014-07-24</li>
 		<li><a href="http://kipid.tistory.com/entry/201406-%EC%A0%95%EB%B6%80%EA%B0%9C%EA%B0%81-%EC%9E%A5%EA%B4%80-%EB%B0%8F-%EA%B0%81-%ED%9B%84%EB%B3%B4%EB%93%A4-%ED%94%84%EB%A1%9C%ED%95%84-%EB%AA%A8%EC%9D%8C">2014-06 정부개각, 장관 및 각 후보들 프로필 모음</a>, 2014-06-23</li>
 		<li><a href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
 		<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
@@ -30,17 +35,18 @@
 		<li><a href="http://kipid.tistory.com/entry/%EC%A0%95%EB%8F%84%EC%A0%84-%EA%B4%80%EB%A0%A8-%EC%97%AD%EC%82%AC-%EC%A0%95%EB%A6%AC">정도전 관련 역사 정리</a>, 2014-06-14</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EB%AC%B8%EC%B0%BD%EA%B7%B9-vs-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014 총리후보, 문창극(文昌克) vs 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
-		<li><a href="http://kipid.tistory.com/entry/Introducing-Sublime-Text-editor">Sublime Text (editor) 소개</a>, 2014-06-13</li>
+		<!-- <li><a href="http://kipid.tistory.com/entry/Introducing-Sublime-Text-editor">Sublime Text (editor) 소개</a>, 2014-06-13</li>
 		<li><a href="http://kipid.tistory.com/entry/docuK-short-copiable-version">HTML docuK format ver. 2.1, short copiable version</a>, 2014-06-13</li>
 		<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
 		<li><a href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
+		<li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%B0%95%EC%9B%90%EC%88%9C%E6%9C%B4%E5%85%83%E6%B7%B3-vs-%EC%A0%95%EB%AA%BD%EC%A4%80%E9%84%AD%E5%A4%A2%E6%BA%96-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">박원순(朴元淳) vs 정몽준(鄭夢準) 프로필 비교</a>, 2014-05-25</li>
 		<li><a href="http://kipid.tistory.com/entry/Delayed-Loading-in-HTML-by-JavaScript-jQuery">Delayed (Lazy) Loading in HTML by JavaScript (+jQuery)</a>, 2014-05-29</li>
 		<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
 		<li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
 		<li><a href="http://kipid.tistory.com/entry/Learning-PHP">Learning PHP</a>, 2014-05-22</li>
 		<li><a href="http://kipid.tistory.com/entry/Learning-Nodejs">Learning Node.js</a>, 2014-05-22</li>
-		<!-- <li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.1 (2014-05-22), not released yet</a>, 2014-05-22</li>
+		<li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.1 (2014-05-22), not released yet</a>, 2014-05-22</li>
 		<li><a href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
 		<li><a href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-05-04</li>
 		<li><a href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript">Regular Expression (정규 표현식), and match/replace method in javascript</a>, 2014-05-03</li>
@@ -69,6 +75,7 @@
 		<div class="p"></div>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/Quantum-Mechanics">양자역학 (Quantum Mechanics)</a>, 2014-04-24</li>
+			<li><a href="http://kipid.tistory.com/entry/Decoherence-the-Measurement-Problem-of-Quantum-Mechanics">Decoherence, the Measurement Problem of Quantum Mechanics</a>, 2014-07-29</li>
 		</ul>
 		<div class="p"></div>
 		<ul>
@@ -131,6 +138,7 @@
 			<li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
 			<li><a href="http://kipid.tistory.com/entry/Learning-PHP">Learning PHP</a>, 2014-05-22</li>
 			<li><a href="http://kipid.tistory.com/entry/Learning-Nodejs">Learning Node.js</a>, 2014-05-22</li>
+			<li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
 			<li><a href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
 			<li><a href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript">Regular Expression (정규 표현식), and match/replace method in javascript</a>, 2014-05-03</li>
 			<li><a href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
@@ -198,6 +206,7 @@
 	</div>
 	<div class="subsec"><h3 id="sec-Politics">정치</h3>
 		<ul>
+			<li><a href="http://kipid.tistory.com/entry/%EB%85%B8%ED%9A%8C%EC%B0%AC%E9%AD%AF%E6%9C%83%E7%87%A6-vs-%EB%82%98%EA%B2%BD%EC%9B%90%E7%BE%85%E5%8D%BF%E7%91%97-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">노회찬(魯會燦) vs 나경원(羅卿瑗) 프로필 비교</a>, 2014-07-24</li>
 			<li><a href="http://kipid.tistory.com/entry/201406-%EC%A0%95%EB%B6%80%EA%B0%9C%EA%B0%81-%EC%9E%A5%EA%B4%80-%EB%B0%8F-%EA%B0%81-%ED%9B%84%EB%B3%B4%EB%93%A4-%ED%94%84%EB%A1%9C%ED%95%84-%EB%AA%A8%EC%9D%8C">2014-06 정부개각, 장관 및 각 후보들 프로필 모음</a>, 2014-06-23</li>
 			<li><a href="http://kipid.tistory.com/entry/2014-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EB%AC%B8%EC%B0%BD%EA%B7%B9-vs-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014 총리후보, 문창극(文昌克) vs 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
 			<li><a href="http://kipid.tistory.com/entry/%EB%B0%95%EC%9B%90%EC%88%9C%E6%9C%B4%E5%85%83%E6%B7%B3-vs-%EC%A0%95%EB%AA%BD%EC%A4%80%E9%84%AD%E5%A4%A2%E6%BA%96-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">박원순(朴元淳) vs 정몽준(鄭夢準) 프로필 비교</a>, 2014-05-25</li>
