--- a/works-to-do.html
+++ b/works-to-do.html
@@ -2,16 +2,18 @@
 <div class="sec"><h1>works to do</h1>
 	<ul class="works">
 		<li id="now">
-		서버 vert.x (+node.js 개념, php) 공부 및 테스트. AJAX도.<br>
+		서버 vert.x (+node.js 개념, php) 공부 및 테스트. AJAX 도.<br>
 		SQL, vert.x 서버 이용해서 Recoeve (Recommended for you) 개발하기. (struct.js 도 필요할지도?)<br>
 		Machine Learning 공부<br>
+		personal selection of music: html 파일 내에서 구현하고 싶은 것 정리해 놓음.
+		Dual view like book 2 page view.
 		
+		Slide html test (다음 사진 뷰처럼, 혹은 페이스북 사진 슬라이드 같은 UI)
 		Test text field (Customized styling of scroll bars in HTML)<br>
 		일본/미국 인구 피라미드 google chart로? highchart로?<br>
 		chart 연습해볼겸 "당신은 상위 몇" 이런 글들에서 시도해봐도 괜찮을듯? (이건 우선순위가 뒷쪽인가?)<br>
 		재산 분포도 변화 (연도별로 그래프가 어떻게 변하는지)<br>
 		Getting (JSON?) data from Google spreadsheet.<br>
-		personal selection of musec<br>
 		
 		html canvas/svg로 plotting, graph (여러 js가 있긴 있는듯. Google chart 등.)<br>
 		
@@ -27,6 +29,8 @@
 		plug-in 들 공부. // 다음 view, twitter, google+, facebook like/reply, pinterest, DISQUS relpy/alarm<br>
 		</li>
 		<li id="physics-math">
+		decoherence posting // 양자역학<br>
+		엔트로피 // 온도와 좌표계 상관성<br>
 		Sturm-Liouville Theory<br>
 		불가지론, 불완전성 정리.<br>
 		inside out.<br>
@@ -41,11 +45,8 @@
 		GDP 정리해서 posting<br>
 		한국인과 세계인이 알아야 할 역사 이야기<br>
 		</li>
-		<li id="nearly completed">(대충 완성, 완성 된 자잘한 것들은 지우자)<br>
-		paper 마무리: 프로그래밍 돌리는 중. (데이터 날라갔네 ㅡㅡ;;;; 포기?)<br>
-		<br>
-		decoherence posting // 양자역학<br>
-		엔트로피 // 온도와 좌표계 상관성<br>
+		<li id="quite-later">
+			수식 편집기 (WYSIWYG + latex): drag 편집, copy and paste 편집이 쉽도록. 구상중인 문서 편집기랑도 관계되는... 타블렛 펜 같은걸로 그리는 식의 편집도 궁극적으로는 가능해야 할듯?
 		</li>
 	</ul>
 </div>
