--- a/Lists.html
+++ b/Lists.html
@@ -21,6 +21,7 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Newest">Newest posts</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%B6%80%EC%B1%84%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%97%90%EC%84%9C-%EC%86%8C%EB%93%9D%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%9C%BC%EB%A1%9C">부채주도 성장에서 소득주도 성장으로</a>, 2014-11-14</li>
 		<li><a href="http://kipid.tistory.com/entry/%EC%8A%A4%EB%A7%88%ED%8A%B8-%EC%A7%80%EA%B0%91-Smart-wallet-Apple-pay-Google-wallet-%EB%93%B1-%EC%9D%80-%EC%96%B4%EB%8A%90-%EB%B0%A9%ED%96%A5%EC%9C%BC%EB%A1%9C-%EB%B0%9C%EC%A0%84%ED%95%A0%EA%B9%8C">스마트 지갑 (Smart wallet: Apple pay, Google wallet 등) 은 어느 방향으로 발전할까?</a>, 2014-11-11</li>
 		<li><a href="http://kipid.tistory.com/entry/Laniakea-Our-home-supercluster">Laniakea: Our home supercluster</a>, 2014-09-19</li>
@@ -31,11 +32,11 @@
 		<li><a href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
 		<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
 		<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
-		<li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
+		<!-- <li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
 		<li><a href="http://kipid.tistory.com/entry/%EC%A0%95%EB%8F%84%EC%A0%84-%EA%B4%80%EB%A0%A8-%EC%97%AD%EC%82%AC-%EC%A0%95%EB%A6%AC">정도전 관련 역사 정리</a>, 2014-06-14</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EB%AC%B8%EC%B0%BD%EA%B7%B9-vs-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014 총리후보, 문창극(文昌克) vs 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
-		<!-- <li><a href="http://kipid.tistory.com/entry/Introducing-Sublime-Text-editor">Sublime Text (editor) 소개</a>, 2014-06-13</li>
+		<li><a href="http://kipid.tistory.com/entry/Introducing-Sublime-Text-editor">Sublime Text (editor) 소개</a>, 2014-06-13</li>
 		<li><a href="http://kipid.tistory.com/entry/docuK-short-copiable-version">HTML docuK format ver. 2.1, short copiable version</a>, 2014-06-13</li>
 		<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
 		<li><a href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
@@ -65,6 +66,13 @@
 		<li><a class="emph" href="http://kipid.tistory.com/entry/Linear-Algebra">선형 대수학 간단한 정리들 (Linear Algebra)</a>, 2014-03-18</li>
 	</ul>
 </div> -->
+
+<div class="sec"><h2 class="no-sec-N" id="sec-Recoeve">[Recoeve.net]</h2>
+	<ul>
+		<li><a href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
+		<li>The rest are hiden for the security reason. And these will be open after 5 years from now. (2020)</li>
+	</ul>
+</div><!-- sec: Recoeve -->
 
 <div class="sec"><h2 class="no-sec-N" id="sec-PM">[Physics/Math] Category</h2>
 	<div class="subsec"><h3 id="sec-Physics">Physics (물리 개념과 이론들에 관한 설명들.)</h3>
