--- a/skin.html
+++ b/skin.html
@@ -224,7 +224,7 @@
 					
 					<div class="actionTrail">
 						<a href="#tb" onclick="[##_article_rep_tb_link_##]"><s_tb_count>트랙백 <span class="cnt">[##_article_rep_tb_cnt_##]</span>개</s_tb_count></a>,
-						<a href="#rp" onclick="[##_article_rep_rp_link_##]"><s_rp_count>댓글 <span class="cnt">[##_article_rep_rp_cnt_##]</span>개가 달렸습니다</s_rp_count></a>
+						<a href="#rp" onclick="setTimeout(kipid.mathJaxPreProcessDo, 1000); [##_article_rep_rp_link_##]"><s_rp_count>댓글 <span class="cnt">[##_article_rep_rp_cnt_##]</span>개가 달렸습니다</s_rp_count></a>
 					</div>
 					
 					<s_tb>
