--- a/Lists.html
+++ b/Lists.html
@@ -32,26 +32,6 @@
 		<li><a href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
 		<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
 		<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
-		<!-- <li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
-		<li><a href="http://kipid.tistory.com/entry/%EC%A0%95%EB%8F%84%EC%A0%84-%EA%B4%80%EB%A0%A8-%EC%97%AD%EC%82%AC-%EC%A0%95%EB%A6%AC">정도전 관련 역사 정리</a>, 2014-06-14</li>
-		<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
-		<li><a href="http://kipid.tistory.com/entry/2014-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EB%AC%B8%EC%B0%BD%EA%B7%B9-vs-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014 총리후보, 문창극(文昌克) vs 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
-		<li><a href="http://kipid.tistory.com/entry/Introducing-Sublime-Text-editor">Sublime Text (editor) 소개</a>, 2014-06-13</li>
-		<li><a href="http://kipid.tistory.com/entry/docuK-short-copiable-version">HTML docuK format ver. 2.1, short copiable version</a>, 2014-06-13</li>
-		<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
-		<li><a href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
-		<li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
-		<li><a href="http://kipid.tistory.com/entry/%EB%B0%95%EC%9B%90%EC%88%9C%E6%9C%B4%E5%85%83%E6%B7%B3-vs-%EC%A0%95%EB%AA%BD%EC%A4%80%E9%84%AD%E5%A4%A2%E6%BA%96-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">박원순(朴元淳) vs 정몽준(鄭夢準) 프로필 비교</a>, 2014-05-25</li>
-		<li><a href="http://kipid.tistory.com/entry/Delayed-Loading-in-HTML-by-JavaScript-jQuery">Delayed (Lazy) Loading in HTML by JavaScript (+jQuery)</a>, 2014-05-29</li>
-		<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
-		<li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
-		<li><a href="http://kipid.tistory.com/entry/Learning-PHP">Learning PHP</a>, 2014-05-22</li>
-		<li><a href="http://kipid.tistory.com/entry/Learning-Nodejs">Learning Node.js</a>, 2014-05-22</li>
-		<li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.1 (2014-05-22), not released yet</a>, 2014-05-22</li>
-		<li><a href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
-		<li><a href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-05-04</li>
-		<li><a href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript">Regular Expression (정규 표현식), and match/replace method in javascript</a>, 2014-05-03</li>
-		<li><a href="http://kipid.tistory.com/entry/Interactive-graph-and-chart-in-HTML">Interactive graph and chart in HTML</a>, 2014-05-03</li> -->
 	</ul>
 </div>
 
@@ -128,46 +108,55 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-IT">[IT/Programming] Category</h2>
 	<div class="subsec"><h3 id="sec-IT-HTML">HTML related (HTML, css, javascript 관련 이야기들)</h3>
-		<ul>
-			<li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.0</a>, 2014-04-06</li>
-			<li><a href="http://kipid.tistory.com/entry/docuK-short-copiable-version">HTML docuK format ver. 2.1, short copiable version</a>, 2014-06-13</li>
-			<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
-			<li><a href="http://kipid.tistory.com/entry/equations-in-html">인터넷, Web, HTML, 블로그에서 수식 사용하기 (Equation or math in HTML, blog)</a>, 2014-04-20</li>
-			<li><a href="http://kipid.tistory.com/entry/Syntax-Highlighter-in-HTML-google-code-prettify">인터넷에서 예쁘게 코드 입력하기 (google code prettify)</a>, 2014-01-17</li>
-			<li><a href="http://kipid.tistory.com/entry/Citing-the-references-automatically-in-HTML-like-LaTeX">Citing the references automatically in HTML (like LaTeX)</a>, 2014-03-02</li>
-			<li><a href="http://kipid.tistory.com/entry/introducing-LaTeX-and-Guides">LaTeX(라텍스, 레이텍) 소개 및 설명서(Guide)들</a>, 2014-03-24</li>
-			<li><a href="http://kipid.tistory.com/entry/Delayed-Loading-in-HTML-by-JavaScript-jQuery">Delayed Loading in HTML by JavaScript (+jQuery)</a>, 2014-05-29</li>
-			<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
-			<li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
-			<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
-		</ul>
+		<div class="subsubsec"><h4>DocuK and SEE (Super Easy Edit)</h4>
+			<ul>
+				<li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.0</a>, 2014-04-06</li>
+				<li><a href="http://kipid.tistory.com/entry/docuK-short-copiable-version">HTML docuK format ver. 2.1, short copiable version</a>, 2014-06-13</li>
+				<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
+				<li><a href="http://kipid.tistory.com/entry/equations-in-html">인터넷, Web, HTML, 블로그에서 수식 사용하기 (Equation or math in HTML, blog)</a>, 2014-04-20</li>
+				<li><a href="http://kipid.tistory.com/entry/Syntax-Highlighter-in-HTML-google-code-prettify">인터넷에서 예쁘게 코드 입력하기 (google code prettify)</a>, 2014-01-17</li>
+				<li><a href="http://kipid.tistory.com/entry/Citing-the-references-automatically-in-HTML-like-LaTeX">Citing the references automatically in HTML (like LaTeX)</a>, 2014-03-02</li>
+				<li><a href="http://kipid.tistory.com/entry/introducing-LaTeX-and-Guides">LaTeX(라텍스, 레이텍) 소개 및 설명서(Guide)들</a>, 2014-03-24</li>
+				<li><a href="http://kipid.tistory.com/entry/Delayed-Loading-in-HTML-by-JavaScript-jQuery">Delayed Loading in HTML by JavaScript (+jQuery)</a>, 2014-05-29</li>
+				<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
+				<li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
+				<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
+			</ul>
+		</div><!-- subsubsec : DocuK and SEE (Super Easy Edit) -->
 		<div class="p"></div>
-		<ul>
-			<li><a href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
-			<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
-			<li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
-			<li><a href="http://kipid.tistory.com/entry/Learning-PHP">Learning PHP</a>, 2014-05-22</li>
-			<li><a href="http://kipid.tistory.com/entry/Learning-Nodejs">Learning Node.js</a>, 2014-05-22</li>
-			<li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
-			<li><a href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
-			<li><a href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript">Regular Expression (정규 표현식), and match/replace method in javascript</a>, 2014-05-03</li>
-			<li><a href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
-		</ul>
+		
+		<div class="subsubsec"><h4>HTTP Server and Javascript</h4>
+			<ul>
+				<li><a href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
+				<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
+				<li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
+				<li><a href="http://kipid.tistory.com/entry/Learning-PHP">Learning PHP</a>, 2014-05-22</li>
+				<li><a href="http://kipid.tistory.com/entry/Learning-Nodejs">Learning Node.js</a>, 2014-05-22</li>
+				<li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
+				<li><a href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
+				<li><a href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript">Regular Expression (정규 표현식), and match/replace method in javascript</a>, 2014-05-03</li>
+				<li><a href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
+			</ul>
+		</div><!-- subsubsec : HTTP Server -->
 		<div class="p"></div>
-		<ul>
-			<li><a href="http://kipid.tistory.com/entry/CSS3-examples">CSS3 examples</a>, 2014-04-25</li>
-			<li><a href="http://kipid.tistory.com/entry/Responsible-web-design-with-css-media-query">반응형 웹 만들기 (Responsible web design with css media query)</a>, 2014-03-06</li>
-			<li><a href="http://kipid.tistory.com/entry/Improving-web-performance">Improving web performance</a>, 2014-02-10</li>
-			<li><a href="http://kipid.tistory.com/entry/Interactive-graph-and-chart-in-HTML">Interactive graph and chart in HTML</a>, 2014-03-03</li>
-		</ul>
-		<div class="p"></div>
-		<ul>
-			<li><a href="http://kipid.tistory.com/entry/embedding-twitter-tweet">트위터 트윗 퍼오기</a>, 2014-02-11</li>
-			<li><a href="http://kipid.tistory.com/entry/Facebook-comment-test">댓글 플러그인 | 위젯 (SNS comment plug-in | widget)</a>, 2014-01-17</li>
-			<li><a href="http://kipid.tistory.com/entry/Font-test">여러가지 글꼴 테스트 (Font test)</a>, 2014-01-20</li>
-		</ul>
-		<div class="p"></div>
+		
+		<div class="subsubsec"><h4>Etc. (CSS, graph, widget, web performance)</h4>
+			<ul>
+				<li><a href="http://kipid.tistory.com/entry/CSS3-examples">CSS3 examples</a>, 2014-04-25</li>
+				<li><a href="http://kipid.tistory.com/entry/Responsible-web-design-with-css-media-query">반응형 웹 만들기 (Responsible web design with css media query)</a>, 2014-03-06</li>
+				<li><a href="http://kipid.tistory.com/entry/Improving-web-performance">Improving web performance</a>, 2014-02-10</li>
+				<li><a href="http://kipid.tistory.com/entry/Interactive-graph-and-chart-in-HTML">Interactive graph and chart in HTML</a>, 2014-03-03</li>
+			</ul>
+			<div class="p"></div>
+			<ul>
+				<li><a href="http://kipid.tistory.com/entry/embedding-twitter-tweet">트위터 트윗 퍼오기</a>, 2014-02-11</li>
+				<li><a href="http://kipid.tistory.com/entry/Facebook-comment-test">댓글 플러그인 | 위젯 (SNS comment plug-in | widget)</a>, 2014-01-17</li>
+				<li><a href="http://kipid.tistory.com/entry/Font-test">여러가지 글꼴 테스트 (Font test)</a>, 2014-01-20</li>
+			</ul>
+			<div class="p"></div>
+		</div><!-- subsubsec : Etc. -->
 	</div>
+	
 	<div class="subsec"><h3 id="sec-IT-Algorithm-Database">Algorithm and Database</h3>
 		<ul>
 			<!-- <li><a href="http://kipid.tistory.com/entry/Personalized-recommendation-system">모든것에 대한 개인화 된 추천과 개인화 된 정리함/보관함 (Personalized Recommendation for Everything, and Self-customized List Box)</a>, 2014-05-02</li> -->
@@ -178,7 +167,8 @@
 		</ul>
 		<div class="p"></div>
 	</div>
-	<div class="subsec"><h3 id="sec-IT-etc">Etc.</h3>
+	
+	<div class="subsec"><h3 id="sec-IT-etc">Etc. (editor, languages, IT)</h3>
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/Introducing-Sublime-Text-editor">Sublime Text (editor) 소개</a>, 2014-06-13</li>
 			<li><a href="http://kipid.tistory.com/entry/Introducing-Recommending-good-code-editors">괜찮은 에디터 소개 및 추천 (Introducing-Recommending good code editors)</a>, 2014-03-03</li>
